--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="css/gambar/Capture.JPEG" alt="">
+            <img src="css/gambar/Capture.JPG" alt="">
         </div>
         <div class="topnav">
             <a href="#">Home</a>
